--- a/src/component/Cards/Cards.module.css
+++ b/src/component/Cards/Cards.module.css
@@ -31,6 +31,9 @@
     color: #fff;
 }
 
+.sihalafont{
+    font-size: 20px;
+}
 @media (max-width :700px){
     .card{
         margin: 0 2% !important;
