--- a/src/component/Cards/Cards.module.css
+++ b/src/component/Cards/Cards.module.css
@@ -6,18 +6,18 @@
 
 .infected{
     border-bottom: 10px solid rgba(0, 0, 255, 0.5);
-    background-image: linear-gradient(to right top, #2573d8, #009de3, #60c1e4, #aae1e8, #f1fdfb);
+    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
     
 }
 
 .recoverd{
     border-bottom: 10px solid rgba(0, 255, 0, 0.5);
-    background-image: linear-gradient(to right top, #13c849, #55d571, #7ee295, #a4eeb7, #c9f9d7);
+    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
 }
 
 .deaths{
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
-    background-image: linear-gradient(to right top, #eb3761, #f273a6, #eda8d8, #ecd6f5, #ffffff);
+    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
 }
 .deaths_color{
     color: #fff;
