--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,11 @@
 } */
 
 body {
-  background-image: linear-gradient(to right top, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #f6fbff, #e4f9ff, #cff9ff, #89fdf9, #2ffedc, #00fba8, #10f45f);
+  /* background-image: linear-gradient(to bottom, #121212, #303030, #515151, #757474, #9a9999, #afaeae, #c5c3c4, #dbd9da, #e4e2e3, #edeced, #f6f5f6, #ffffff); */
+  /* background-image: linear-gradient(to left bottom, #121212, #232323, #343435, #474647, #5b595a, #6e6c6d, #828081, #969595, #afaeaf, #c9c9c9, #e4e4e4, #ffffff); */
+  background-image: linear-gradient(to left bottom, #000000, #201f1f, #3a3838, #555353, #736f6f, #888484, #9e9a9a, #b4b0b1, #c6c3c5, #d8d7d8, #ebebec, #ffffff);
+
+
 } 
 
 .App {
@@ -72,7 +76,7 @@ body {
   max-width:1000px; */
   align-items: center;
   justify-content: center;
-  padding-top: 40px;
+  padding-top: 0px;
 }
 
 .completeStyle{
@@ -115,15 +119,18 @@ display: block;
 }
 
 .image{
-  width: 650px;
-  margin-top: 50px;
+  height: 50%;
+  width: 400px;
+  margin-top: 10px;
+  margin-left: 200px;
 }
 
-@media(max-width :700px){
+@media(max-width :600px){
   .container{
   }
 
   .image{
-    width: 100%;
+    margin-left: 0px !important;
+    width: 100% !important;
   }
 }
