--- a/src/component/Cards/Cards.module.css
+++ b/src/component/Cards/Cards.module.css
@@ -6,18 +6,18 @@
 
 .infected{
     border-bottom: 10px solid rgba(0, 0, 255, 0.5);
-    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
+    background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
     
 }
 
 .recoverd{
     border-bottom: 10px solid rgba(0, 255, 0, 0.5);
-    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
+    background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
 }
 
 .deaths{
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
-    background-image: linear-gradient(to right top, #2d282b, #383237, #423d44, #4b4952, #545560, #606570, #6d757f, #7b868f, #929fa5, #acb8bc, #c6d1d3, #e2ebeb);
+    background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
 }
 .deaths_color{
     color: #fff;
